[JAX-WS-777] Creating one schema using the following algo(from the xerces discussing thread): "If you're synthesizing schema documents to glue together the ones in the WSDL then you may not even need to use "honour-all-schemaLocations". Create a schema document for each namespace with <xs:include>s (for each schema document in the WSDL with that target namespace) and then combine those together with <xs:import>s for each of those namespaces in a "master" schema document. That should work with any schema processor, not just those which honour multiple imports for the same namespace."
Issue number:
Obtained from:
Submitted by:
Reviewed by: